fix: Add text-overflow ellipsis for comment.

--- a/source/styles/sections/comments.scss
+++ b/source/styles/sections/comments.scss
@@ -22,8 +22,7 @@
     background-color: #dde1e2;
     color: #5c7698;
     padding: 16px;
-    max-width: 380px;
-    width: 100%;
+    width: 230px;
     position: relative;
     margin-left: 24px;
     margin-right: 5px;
@@ -60,6 +59,9 @@
   }
 
   .text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin: 0;
   }
 }
